# Unsubscribe-Agent

./: README.md  main.py  mcp.py  pyproject.toml  pytest.ini
app/: config.py  main.py
app/handlers/: email_handler.py
app/services/: llm_instance.py
app/services/unsubscribers/: base.py  browser_use_unsubscriber.py  email_unsubscriber.py  unsubscriber.py
app/tools/: browser_agent.py  email_sender.py
app/types/: email.py  unsubscribe.py
tests/: conftest.py  test_browser_use_unsubscriber.py  test_browser_use_unsubscriber_integration.py  test_email_handler.py
