[project]
name = "unsubscribe-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "browser-use>=0.7.7",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.2",
    "fastmcp>=2.12.3",
    "langchain-google-genai>=2.1.12",
    "lxml>=6.0.1",
    "pytest>=8.4.2",
    "requests>=2.31.0",
]
